@@ -6,6 +6,7 @@
 	- RFC-01: Added vnlists feature and removed rlists.vstat option
 	- ULists::votelist: Don't give a 404 on /u+/votes when no votes found
 	- Added tab and link for /u+/votes to user tabs & main menu
+	- Added ability to batch-edit votes to /u+/votes
 	- ULists::votelist: Added first character selection
 	- Added advanced page-browsing tabs to threads
 
